--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgnL-6fb5PhgkCkH3odiqgPmhqoWm6HeRjwQ&usqp=CAU" alt=" image of cat"/>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
